--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<body bgcolor="000000" link="gray" vlink="gray">
+<body bgcolor="000000" text="white" link="gray" vlink="gray">
 <link rel="apple-touch-icon" href="apple-touch-icon180.png" sizes="180x180">
 
 
@@ -33,7 +33,7 @@
 <a href="#Formkempo">大藝汰帝国憲法</a> / <a href="#Formaisatsu">護藝庁新学期の挨拶</a> / <a href="#Formbara">たった一輪の薔薇</a>
 <hr>
 <div id=Formkokka></div>
-<p style="background-color:#fbf8f1;" ><b><font size="6">国家機関承認書</font></b> <br>
+<p style="background-color:#1d1d1d;" ><b><font size="6">国家機関承認書</font></b> <br>
 	<small>こっかきかんしょうにんしょ</small>
     <small></p>
 作者：高場俊輔<font size="1"></font><br><hr>
@@ -55,7 +55,7 @@
 高場（実印）
 <hr>
 <div id=Formjuyo></div>
-<p style="background-color:#fbf8f1;" ><b><font size="6">重要承認書</font></b> <br>
+<p style="background-color:#1d1d1d;" ><b><font size="6">重要承認書</font></b> <br>
 	<small>じゅうようしょうにんしょ</small>
     <small></p>
 作者：高場俊輔<font size="1"></font><br><hr>
@@ -79,7 +79,7 @@
 高場（実印）<br>
 <hr>
 <div id=Formchokun></div>
-<p style="background-color:#fbf8f1;" ><b><font size="6">護藝庁訓</font></b> <br>
+<p style="background-color:#1d1d1d;" ><b><font size="6">護藝庁訓</font></b> <br>
 	<small>ごげいちょうくん</small>
     <small></p>
 作者：高場俊輔<font size="1"></font><br><hr>
@@ -94,7 +94,7 @@
 この機関では、主に 天皇の補佐、保護を行います。よって我々は大前提として、天皇を侮辱の対象にしないこと、最終目的は虐めの撲滅であることを掲げます。皆さんは一庁員としての責任を持ち、軽率且つ侮辱的な言動を控え、もし人道から外れる行為を行った場合は学級問題に成りかねないことを覚えておいてください。天皇にとってこの学校がより良いものとなるように心から祈っています。
 <hr>
 <div id=Formkempo></div>
-<p style="background-color:#fbf8f1;" ><b><font size="6">大藝汰帝国憲法</font></b> <br>
+<p style="background-color:#1d1d1d;" ><b><font size="6">大藝汰帝国憲法</font></b> <br>
 	<small>だいげいたていこくけんぽう</small>
     <small></p>
 作者：高場俊輔<font size="1"></font><br><hr>
@@ -109,7 +109,7 @@
 	
 	<hr>
 <div id=Formaisatsu></div>
-<p style="background-color:#fbf8f1;" ><b><font size="6">護藝庁新学期の挨拶</font></b> <br>
+<p style="background-color:#1d1d1d;" ><b><font size="6">護藝庁新学期の挨拶</font></b> <br>
 	<small>ごげいちょう しんがっきのあいさつ</small>
     <small></p>
 作者：高場俊輔<font size="1"></font><br><hr>
@@ -130,7 +130,7 @@
 皇成元年四月八日<br>
 護藝庁一同<hr>
 <div id=Formbara></div>
-	<p style="background-color:#fbf8f1;" ><b><font size="6">たった一輪の薔薇</font></b> <br>
+	<p style="background-color:#1d1d1d;" ><b><font size="6">たった一輪の薔薇</font></b> <br>
 	<small>たったいちりんのばら</small>
     <small></p>
 作者：牛島弘登（うしじまひろと）　<br><hr>
