--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
 <title>菊阿学図書館 電子版</title>
         
                 <b><font size="15">菊阿学図書館</font><font size="5" face="sans-serif"> 電子版</font></b>
-	<p style="text-align: right"><a href= "https://avirys.github.io/aviribrary_/" >ダークモード</a></p>
 	
 	<br>
 
 	<form id="form1" action="https://www.bing.com/" method="get">
 <input id="sbox1" id="s" name="s" type="text" placeholder="検索はできません" />
 <input id="sbtn1" type="submit" value="検索" /></form> 
-
+<a href= "https://avirys.github.io/aviribrary/" >通常モード</a> / <a href= "https://avirys.github.io/avirytionary/" >新菊阿辞典</a> 
 	<hr>
 
 <font size="6"><b>倫舎学領域</font></b><small>  舎1期(2010年4月)〜舎6期(2016年4月)</small><br>
