--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 基詩：季節は次々死んでゆく<hr>
 畠喰種は、須田義輝・高場俊輔により成立した阿詩。サビの怒涛の悪口が特徴で、投屑文化がよく表されている秀作。
 		</small><hr>
-畠は消しかす投げられる<br>生徒の笑いが風になる<br>ボロい学校のキモすぎ女<br>3秒間見ただけで吐き気する<br>空き缶拾って売る生活に<br>雨は鼻くその味がした<br>キモすぎ目で彷徨う学校<br>挙動不審のイノセント 駅前にて<br>畠を教師と呼ぶには不確かな<br>半透明な髪が生きてる風だ<br>畠が歌えば雲は割れるか<br>賑やかな夏の〈？〉シワシワ命だ<br><br>畠 キモすぎる ブスい顔 授業つまんない<br>最低な顔の 最悪な授業の<br>残骸を捨てては行けずここで息絶えようと<br>後世 髪は散り<br>
+畠は消しかす投げられる<br>生徒の笑いが風になる<br>ボロい学校のキモすぎ女<br>3秒間見ただけで吐き気する<br>空き缶拾って売る生活に<br>雨は鼻くその味がした<br>キモすぎ目で彷徨う学校<br>挙動不審のイノセント 校庭にて<br>畠を教師と呼ぶには不確かな<br>半透明な髪が生きてる風だ<br>畠が歌えば雲は割れるか<br>賑やかな夏の<sup><font size="1">[?]</sup></font>シワシワ命だ<br><br>畠 キモすぎる ブスい顔 授業つまんない<br>最低な顔の 最悪な授業の<br>残骸を捨てては行けずここで息絶えようと<br>後世 髪は散り<br>
 <br>
 <font size="6"><b>菊郭学領域</font></b><small>  郭1期(2016年4月)〜郭3期(2019年4月)</small><br>
 <a href="#Formkokka">国家承認書</a> / <a href="#Formjuyo">重要承認書（奉還詔）</a> / <a href="#Formchokun">護藝庁訓</a> / 
