--- a/index.html
+++ b/index.html
@@ -28,7 +28,47 @@
 畠喰種は、須田義輝・高場俊輔により成立した阿詩。サビの怒涛の悪口が特徴で、投屑文化がよく表されている秀作。
 		</small><hr>
 畠は消しかす投げられる<br>生徒の笑いが風になる<br>ボロい学校のキモすぎ女<br>3秒間見ただけで吐き気する<br>空き缶拾って売る生活に<br>雨は鼻くその味がした<br>キモすぎ目で彷徨う学校<br>挙動不審のイノセント 校庭にて<br>畠を教師と呼ぶには不確かな<br>半透明な髪が生きてる風だ<br>畠が歌えば雲は割れるか<br>賑やかな夏の<sup><font size="1">[?]</sup></font>シワシワ命だ<br><br>畠 キモすぎる ブスい顔 授業つまんない<br>最低な顔の 最悪な授業の<br>残骸を捨てては行けずここで息絶えようと<br>後世 髪は散り<br>
+<hr>
+
+<div id=Formhata></div>
+<p style="background-color:#fbf8f1;" ><b><font size="6">アヴァンゲリオン</font></b> <br>
+	<small>Avangelliwon</small>
+    <small></p>
+作者：高場俊輔<font size="1">（五十音順）</font><br><hr>
+成立：2014年?<br><hr>
+種別：替詩<br><hr>
+基詩：残酷な天使のテーゼ<hr>
+別名：醜悪な倫子のテーゼ<hr>
+アヴァンゲリオンは、高場俊輔により成立した阿詩。特徴は基詩をほとんど変えずに一部を変えることで、基詩の歌詞を違う意味に錬成する製法で、智氏に「元の歌からあんま変えてないのがいいね」と評価された。
+		</small><hr>
+
+キモいくまがいま<br>
+鼻のドアを叩いても<br>
+三浦だけをただ見つめて<br>
+ニヤけているくまさん<br>
+指に触れるもの<br>
+求めることに夢中で<br>
+運命さえまだ知らない<br>
+いたいけな瞳<br>
+
 <br>
+
+だけどいつか気付くでしょう<br>
+その鼻糞には<br>
+人を寄せ付けないための<br>
+壁があること<br>
+
+<br>
+
+ほじほじほじきゅきゅきゅきゅきゅきゅきゅ<br>
+東金子からやがて飛び立つ<br>
+ほとばしる熱いパトスで<sup><font size="1">[?]</sup></font><br>
+思い出を裏切るなら<br>
+鼻糞を抱いて輝く<br>
+くまさんよ転校しろ<br>
+
+<br>
+
 <font size="6"><b>菊郭学領域</font></b><small>  郭1期(2016年4月)〜郭3期(2019年4月)</small><br>
 <a href="#Formkokka">国家承認書</a> / <a href="#Formjuyo">重要承認書（奉還詔）</a> / <a href="#Formchokun">護藝庁訓</a> / 
 <a href="#Formkempo">大藝汰帝国憲法</a> / <a href="#Formaisatsu">護藝庁新学期の挨拶</a> / <a href="#Formbara">たった一輪の薔薇</a>
