--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <hr>
 
 <div id=Formhata></div>
-<p style="background-color:#fbf8f1;" ><b><font size="6">アヴァンゲリオン</font></b> <br>
+<p style="background-color:#1d1d1d;" ><b><font size="6">アヴァンゲリオン</font></b> <br>
 	<small>Avangelliwon</small>
     <small></p>
 作者：高場俊輔<font size="1">（五十音順）</font><br><hr>
