--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<hr>
 
 <font size="6"><b>倫舎学領域</font></b><small>  舎1期(2010年4月)〜舎6期(2016年4月)</small><br>
-<a href="#Formhata">畠喰種</a> / 
+<a href="#Formhata">畠喰種</a> / <a href="#Formava">アヴァンゲリオン</a>
 	<hr>
 <div id=Formhata></div>
 <p style="background-color:#1d1d1d;" ><b><font size="6">畠喰種</font></b> <br>
@@ -30,7 +30,7 @@
 畠は消しかす投げられる<br>生徒の笑いが風になる<br>ボロい学校のキモすぎ女<br>3秒間見ただけで吐き気する<br>空き缶拾って売る生活に<br>雨は鼻くその味がした<br>キモすぎ目で彷徨う学校<br>挙動不審のイノセント 校庭にて<br>畠を教師と呼ぶには不確かな<br>半透明な髪が生きてる風だ<br>畠が歌えば雲は割れるか<br>賑やかな夏の<sup><font size="1">[?]</sup></font>シワシワ命だ<br><br>畠 キモすぎる ブスい顔 授業つまんない<br>最低な顔の 最悪な授業の<br>残骸を捨てては行けずここで息絶えようと<br>後世 髪は散り<br>
 <hr>
 
-<div id=Formhata></div>
+<div id=Formava></div>
 <p style="background-color:#1d1d1d;" ><b><font size="6">アヴァンゲリオン</font></b> <br>
 	<small>Avangelliwon</small>
     <small></p>
@@ -51,7 +51,7 @@
 運命さえまだ知らない<br>
 いたいけな瞳<br>
 
-<br>
+<hr>
 
 だけどいつか気付くでしょう<br>
 その鼻糞には<br>
