--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p style="background-color:#1d1d1d;" ><b><font size="6">アヴァンゲリオン</font></b> <br>
 	<small>Avangelliwon</small>
     <small></p>
-作者：高場俊輔<font size="1">（五十音順）</font><br><hr>
+作者：高場俊輔<font size="1"></font><br><hr>
 成立：2014年?<br><hr>
 種別：替詩<br><hr>
 基詩：残酷な天使のテーゼ<hr>
